ajout dossier img & correction relancerGame

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         
         <div class="border" :style="{margin: '50px'}">
-            <img src="./player.png" alt="Player" height="120" width="100">
+            <img src="./img/player.png" alt="Player" height="120" width="100">
             <p>Anubis: {{viePlayer}}PV</p>
             <div :style="{height: '20px', width: viePlayer+'px', backgroundColor: colorViePlayer, margin: '0 auto'}" >
                 
