sound effects attack/special/heal & img defeat/victory

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         
         <div class="border" :style="{margin: '50px'}">
-            <img src="./img/player.png" alt="Player" height="120" width="100">
+            <img :src=playerImg alt="Player" height="120" width="100">
             <p>Anubis: {{viePlayer}}PV</p>
             <div :style="{height: '20px', width: viePlayer+'px', backgroundColor: colorViePlayer, margin: '0 auto'}" >
                 
