--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body id="app">
     <div class="text-center">
-        <h1><em>BisBisBattle</em></h1>
+        <img src="./img/title.png" alt='BisBisBattle' height="70" width="300">
         <h2>{{result}}</h2>
         <h2>Tour {{currentround}}</h2>
         <p>Victory: {{win}}</p>
