--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
                 <h2>Tour {{currentround}}</h2>     
             </div>
             <div class="col-sm">
-                <p v-if="win > 1">Points de victoire: {{win}}</p>
-                <p v-else>Point de victoire: {{win}}</p>
+                <p>{{win >= 2 ? 'Points de victoires:':'Points de victoire:'}} {{win}}</p>
             </div>
         </div>
         
@@ -43,7 +42,7 @@
 
         <div class="border" :style="{margin: '50px'}">
             <img :src=img :alt=nomImg height="130" width="150">
-            <p>{{nomImg}}: {{vieAdversaire}}PV</p>
+            <p>{{nomImg}}: {{vieAdversaire}}</p>
             <div :style="{height: '20px', width: vieAdversaire+'px', backgroundColor: colorVieAdversaire, margin: '0 auto'}" >
                 
             </div>
