correction ffichage dégâts ennemi

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <div class="border" :style="{margin: '50px'}">
             <img :src=img :alt=nomImg height="130" width="150">
-            <p>{{nomImg}}: {{vieAdversaire}}PV</p>
+            <p>{{nomImg}}: {{vieAdversaire.toFixed(2)}}PV</p>
             <div :style="{height: '20px', width: vieAdversaire+'px', backgroundColor: colorVieAdversaire, margin: '0 auto'}" >
                 
             </div>
