--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         
-        <button class="btn btn-dark" v-on:click="relancerGame()">{{textLancer}}</button>
+        <button class="btn btn-dark" v-on:click="relancerGame()">{{textLancer}} ({{reloadEnnemi}})</button>
 
         <div class="border" :style="{margin: '50px'}">
             <img :src=img :alt=nomImg height="130" width="150">
