victory en général

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                 <h2>Tour {{currentround}}</h2>     
             </div>
             <div class="col-sm">
-                <p>{{win >= 2 ? 'Points de victoires:':'Point de victoires:'}} {{win}}</p>
+                <p>{{winPts >= 2 ? 'Points de victoires:':'Point de victoires:'}} {{winPts}}</p>
+                <p>{{victory >= 2 ? 'Victoires en général:':'Victoire en général:'}} {{victory}}</p>
             </div>
         </div>
         
